[metadata]
name = port_captain
description = Orchastrate AWS IoT Core data processing based on platform definitions 
author = Alex Kerney
author_email = akerney@gmri.org
url = https://github.com/ioos/port_captain
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = False
install_requires =
    email-validator
    pydantic
    pydantic-yaml
    pyyaml
python_requires = >=3.6
packages = find:

[options.entry_points]
console_scripts =
    port_captain = port_captain.command:main

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = port_captain/_version.py
